# python-dojo-katas

./: .gitignore  README.md  pyproject.toml
src/python_dojo_katas/pydantic_ai_katas/: basic_agents.py  config.py  streaming_katas.py  tool_integration.py
src/python_dojo_katas/pydantic_katas/: advanced_features.py  basic_models.py  validation_katas.py
src/python_dojo_katas/uv_katas/: dependency_management.py  project_setup.py
tests/: test_pydantic_ai_katas.py  test_pydantic_katas.py  test_uv_katas.py
